force-app/main/default/objects/ReportMaster__c/ReportMaster__c.object-meta.xml
<CustomObject>
    <label>帳票マスタ</label>
    <nameField>
        <displayFormat>RM-{0000}</displayFormat>
        <label>帳票マスタ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>