force-app/main/default/objects/ReportMaster__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>業務</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>解約申入</fullName>
            </value>
            <value>
                <fullName>入替</fullName>
            </value>
            <value>
                <fullName>更新</fullName>
            </value>
            <value>
                <fullName>条件変更</fullName>
            </value>
            <value>
                <fullName>取引先</fullName>
            </value>
            <value>
                <fullName>物件</fullName>
            </value>
            <value>
                <fullName>解約精算</fullName>
            </value>
            <value>
                <fullName>文書管理</fullName>
            </value>
            <value>
                <fullName>車庫証明</fullName>
            </value>
            <value>
                <fullName>ケース</fullName>
            </value>
            <value>
                <fullName>捺印申請</fullName>
                <isActive>false</isActive>
                <label>捺印申請</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>