force-app/main/default/objects/ReportMaster__c/fields/ReportName__c.field-meta.xml
<CustomField>
    <fullName>ReportName__c</fullName>
    <label>帳票名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>テストFAX</fullName>
            </value>
            <value>
                <fullName>斡旋依頼書</fullName>
            </value>
            <value>
                <fullName>物件決定報告書</fullName>
            </value>
            <value>
                <fullName>入居申込書用捺印申請書</fullName>
            </value>
            <value>
                <fullName>決裁申請書</fullName>
            </value>
            <value>
                <fullName>SNT契約書_部屋</fullName>
            </value>
            <value>
                <fullName>フリー送付書</fullName>
            </value>
            <value>
                <fullName>五点依頼書_部屋用</fullName>
            </value>
            <value>
                <fullName>五点依頼書_駐車場用</fullName>
            </value>
            <value>
                <fullName>五点依頼書_名変用</fullName>
            </value>
            <value>
                <fullName>ＳＮＴ契約書_駐車場</fullName>
            </value>
            <value>
                <fullName>反社覚書</fullName>
            </value>
            <value>
                <fullName>交渉書面_仲介宛</fullName>
            </value>
            <value>
                <fullName>仲介承認連絡_部屋</fullName>
            </value>
            <value>
                <fullName>仲介承認連絡_駐車場</fullName>
            </value>
            <value>
                <fullName>名変覚書_敷金預入</fullName>
            </value>
            <value>
                <fullName>名変覚書_敷金スライド</fullName>
            </value>
            <value>
                <fullName>名変覚書_敷金なし</fullName>
            </value>
            <value>
                <fullName>法人専用特約</fullName>
            </value>
            <value>
                <fullName>日管協契約書</fullName>
            </value>
            <value>
                <fullName>新規契約書類用捺印申請書</fullName>
            </value>
            <value>
                <fullName>業者宛送付書</fullName>
            </value>
            <value>
                <fullName>社員宛送付書</fullName>
            </value>
            <value>
                <fullName>企業宛送付書</fullName>
            </value>
            <value>
                <fullName>契約書保管シート</fullName>
            </value>
            <value>
                <fullName>返送未着督促_初回</fullName>
            </value>
            <value>
                <fullName>保管未着督促書</fullName>
            </value>
            <value>
                <fullName>5点書類督促</fullName>
            </value>
            <value>
                <fullName>F_InvoiceReceiptAsynchronous</fullName>
                <label>精算合意及び精算金送金案内</label>
            </value>
            <value>
                <fullName>F_RefundBankGuideAsynchronous</fullName>
                <label>自動返金口座案内</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>