force-app/main/default/objects/ReportMaster__c/fields/ReportSortNum__c.field-meta.xml
<CustomField>
    <fullName>ReportSortNum__c</fullName>
    <label>帳票ソート番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>