force-app/main/default/objects/ReportMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ReportName__c</columns>
    <columns>Operation__c</columns>
    <columns>Account__c</columns>
    <columns>ReportNum__c</columns>
    <columns>ReportType__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>